--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "holesail-client",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "A Holepunch based client to connect to holesail-server and other HyperDHT servers",
   "main": "index.js",
   "scripts": {
@@ -24,9 +24,9 @@
   },
   "homepage": "https://github.com/holesail/holesail-client#readme",
   "dependencies": {
+    "@holesail/hyper-cmd-lib-net": "^0.1.0",
     "graceful-goodbye": "^1.3.0",
     "hyper-cmd-lib-keys": "^0.0.2",
-    "hyper-cmd-lib-net": "^0.0.1",
     "hyperdht": "^6.11.7"
   }
 }
