--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "holesail-client",
-  "version": "1.0.6",
-  "description": "A Holepunch based client to connect to holesail-server and other HyperDHT servers",
+  "version": "1.1.0",
+  "description": "A client for securely connecting to holesail-server using P2P ",
   "main": "index.js",
   "scripts": {
     "test": "node ./test.js"
@@ -24,8 +24,8 @@
   },
   "homepage": "https://github.com/holesail/holesail-client#readme",
   "dependencies": {
-    "@holesail/hyper-cmd-lib-net": "^0.1.0",
-    "graceful-goodbye": "^1.3.0",
+    "@holesail/hyper-cmd-lib-net": "latest",
+    "b4a": "^1.6.6",
     "hyper-cmd-lib-keys": "^0.0.2",
     "hyperdht": "^6.11.7"
   }
