--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "holesail-client",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "A client for securely connecting to holesail-server using P2P ",
   "main": "index.js",
   "scripts": {
@@ -26,6 +26,7 @@
   "dependencies": {
     "@holesail/hyper-cmd-lib-net": "latest",
     "b4a": "^1.6.6",
+    "bare-net": "^1.0.1",
     "hyper-cmd-lib-keys": "^0.0.2",
     "hyperdht": "^6.11.7"
   }
