--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "holesail-client",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "A client for securely connecting to holesail-server using P2P ",
   "main": "index.js",
   "scripts": {
@@ -24,10 +24,10 @@
   },
   "homepage": "https://github.com/holesail/holesail-client#readme",
   "dependencies": {
-    "@holesail/hyper-cmd-lib-net": "latest",
+    "@holesail/hyper-cmd-lib-net": "^0.1.0",
     "b4a": "^1.6.6",
     "bare-net": "^1.0.1",
     "hyper-cmd-lib-keys": "^0.0.2",
-    "hyperdht": "^6.11.7"
+    "hyperdht": "^6.16.2"
   }
 }
