--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "holesail-client",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "A client for securely connecting to holesail-server using P2P ",
   "main": "index.js",
   "scripts": {
@@ -15,7 +15,8 @@
     "hyperdht",
     "holepunch",
     "pearjs",
-    "keet"
+    "keet",
+    "supersu"
   ],
   "author": "supersuryaansh",
   "license": "GPL-3.0",
@@ -24,6 +25,7 @@
   },
   "homepage": "https://github.com/holesail/holesail-client#readme",
   "dependencies": {
+    "net": "npm:bare-net",
     "@holesail/hyper-cmd-lib-net": "^0.1.0",
     "b4a": "^1.6.6",
     "bare-net": "^1.0.1",
