--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
   },
   "homepage": "https://github.com/holesail/holesail-client#readme",
   "dependencies": {
-    "net": "npm:bare-net",
     "@holesail/hyper-cmd-lib-net": "^0.1.0",
     "b4a": "^1.6.6",
     "bare-net": "^1.0.1",
     "hyper-cmd-lib-keys": "^0.0.2",
-    "hyperdht": "^6.16.2"
+    "hyperdht": "^6.17.2",
+    "net": "npm:bare-net",
+    "standard": "^17.1.2"
   }
 }
