Add UDP support

--- a/package.json
+++ b/package.json
@@ -25,12 +25,13 @@
   },
   "homepage": "https://github.com/holesail/holesail-client#readme",
   "dependencies": {
-    "@holesail/hyper-cmd-lib-net": "^0.1.0",
+    "@holesail/hyper-cmd-lib-net": "^0.2.0",
     "b4a": "^1.6.6",
     "bare-net": "^1.0.1",
-    "hyper-cmd-lib-keys": "^0.0.2",
     "hyperdht": "^6.17.2",
-    "net": "npm:bare-net",
+    "net": "npm:bare-net"
+  },
+  "devDependencies": {
     "standard": "^17.1.2"
   }
 }
