--- a/package.json
+++ b/package.json
@@ -22,12 +22,11 @@
   },
   "homepage": "https://github.com/holesail/holesail-client#readme",
   "dependencies": {
-    "@holesail/hyper-cmd-lib-net": "^0.2.0",
-    "b4a": "^1.6.6",
+    "@holesail/hyper-cmd-lib-net": "^0.2.1",
+    "b4a": "^1.6.7",
     "bare-net": "^2.0.1",
     "hyperdht": "^6.20.1",
-    "net": "npm:bare-net",
-    "z32": "^1.1.0"
+    "net": "npm:bare-net"
   },
   "devDependencies": {
     "standard": "^17.1.2"
