--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "b4a": "^1.6.7",
     "bare-net": "^2.0.1",
     "hyperdht": "^6.20.1",
-    "net": "npm:bare-net"
+    "net": "npm:bare-net",
+    "z32": "^1.1.0"
   },
   "devDependencies": {
     "standard": "^17.1.2"
