--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "holesail-client",
-  "version": "2.2.0",
-  "description": "A client for securely connecting to holesail-server using P2P ",
+  "version": "2.3.0",
+  "description": "A client for connecting to Holesail P2P reverse proxy. ",
   "main": "index.js",
   "scripts": {
     "test": "npx prettier . --check",
